<resources>
    <!-- General concerning App -->
    <string name="app_name">PLT Tour App</string>
    <string name="action_settings">Settings</string>
    <string name="action_connection">Content</string>
    <string name="action_about">About this App</string>
    <string name="authors"></string>
    <string name="action_linkedData">Linked Data</string>

    <!-- Main content -->
    <string name="content_text">Content goes here</string>

    <!-- Navigation drawer -->
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_header_title">Design Example</string>

    <!-- About page -->
    <string name="about_appinfo1">Die App „PLT Tour App“ unterstützt die Aufgaben zur Instandhaltung des Gerätezentrums für Automatisierungstechnik (GZAT).</string>
    <string name="about_appinfo2">  Anhand bestimmter Touren können die verschiedenen Checkpoints im GZAT überprüft und die Aufgaben daran erledigt werden. Die App gibt dabei die Möglichkeit, die Checkpoints individuell oder in einer bestimmten Reihenfolge abzuarbeiten. Zu jedem Checkpoint enthält sie eine detaillierte Aufgabenbeschreibung und die Möglichkeit, Rückgabewerte einzutragen.</string>
    <string name="about_appinfo3">  Neben der Bedienung über das Touch Display kann die Mobile App auch mit einem Dreh-Drücksteller benutzt werden.</string>
    <string name="about_appinfo4">  Die Anbindung an die Anlage erfolgt über die Verbindung zu einem OPC-UA-Server. Für die Abfrage weiterer Anlagendaten kann die App auf das Anlagenmodell auf einem Linked-Data-Server zugreifen.</string>
    <string name="about_appinfo5">  Die Mobile App ist im Rahmen des Projekts Mensch-Maschine-Systemtechnik im Wintersemester 2015/2016 entstanden. Entwickelt und ausgearbeitet wurde sie von Barbara Spitz, Tuyen Viet Pham, Matthieu Scherpf und David Dawidowski.</string>



    <string name="about_authors"></string>

    <string name="pref_title_linkedData_uri">URI</string>
    <string name="pref_category_linkedData_connection">Linked Data</string>
    <string name="pref_title_linkedData_endpoint">Endpoint</string>
    <string name="pref_summary_linkedData_endpoint">The endpoint of linked data</string>

    <string name="noNetwork">No network connection available!</string>
    <!-- Preferences -->




    <string name="ok">Ok</string>
    <string name="cancel">cancel</string>

    <string name="settings">Einstellung</string>
    <string name="about">Über diese App</string>

    <string-array name="items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>

</resources>
