<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group
        android:id="@+id/group_content"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_connection"
            android:orderInCategory="100"
            android:title="@string/action_connection"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_linkedData"
            android:orderInCategory="100"
            android:title="@string/action_linkedData"
            app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info_black_48dp"
            android:orderInCategory="100"
            android:title="@string/action_about"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />
    </group>
</menu>
